# persistent-laplacians

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  exploration.ipynb  pyproject.toml  requirements.txt  scipy_lanczos.ipynb  smallest_eigenvalues.ipynb  tests.sh  timings.ipynb
.github/workflows/: python-app.yml  rust.yml
benches/: eigenvalues.rs  helpers.rs  homology.rs  persistent_laplacian_bench.rs  single_pair.rs  sparse_ops.rs  up_persistent_laplacian_bench.rs
notebooks/: cubical_complexes.ipynb  evaluate_on_dataset.ipynb  proteins.ipynb  smallest_eigenvalues.ipynb  timings.ipynb
python/data_analysis/: cross_validation.py
python/persistent_laplacians/: barcodes.py  cubical_complexes.py  data.py  eigenvalues.py  filtrations.py
python/tests/: test_cubical_homology.py  test_eigenvalues_compare_petls.py  test_homology.py
src/: barcodes.py  eigenvalues.rs  filtrations.py  homology.rs  laplacians.rs  lib.rs  persistent_betty.py  sparse.rs  utils.rs
tests/: test_homology.py
