[package]
name = "persistent-laplacians"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.18", features = ["auto-initialize", "abi3-py38"] }
numpy = "0.18"
sprs = "0.11"
nalgebra-sparse = "0.10.0"
nalgebra = "0.33.2"
approx = "0.5.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.9.1"
rand_chacha = "0.9.0"
single-svdlib = "1.0.1"
rayon = "1.10.0"
dashmap = "6.1.0"
svdlibrs = "0.5.1"

[build-dependencies]
pyo3-build-config = "0.18"

[dev-dependencies]
criterion = "0.5.1"
pyo3 = { version = "0.18", features = ["auto-initialize"] }

[lib]
name = "persistent_laplacians"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "bench_homology"
path = "benches/homology.rs"
harness = false
